assets/css/dashboard-css-2024.css
/* ... */
.dark-mode .nav-links.active {
    background-color: #9dd0ff;
    color: #000 !important;
}

.dark-mode .nav-links-clickable.active {
    color: #000 !important;
}

.dark-mode .nav-links.active:hover,
.dark-mode .nav-links-clickable.active:hover {
    color: #000 !important;
}

.dark-mode .filter-white-on-dark {
    filter: invert(1) !important;
}

.dark-mode .log-entry {
    border-bottom: 1px solid #444;
}

.dark-mode .settings-header,
.dark-mode .card-header-services {
    background-color: #222 !important;
}

.dark-mode .card-header-services {
    border:1px solid #333 !important;
}

/* =================== Nexure Dashboard Grid Styles =================== */

.special-caliweb-spacing {
    grid-row-gap: 10px !important;
    grid-column-gap: 10px !important;
}

.customer-grid-quick-actions {
    grid-row-gap: 40px !important;
    grid-column-gap: 40px !important;
}

.account-grid-modified {
    -ms-grid-columns: 1.5fr .5fr;
    grid-template-columns: 1.5fr .5fr;
}

.profile-grid-modified {
    -ms-grid-columns: .5fr 1fr .5fr;
    grid-template-columns: .5fr 1fr .5fr;
}

.email-grid {
    -ms-grid-columns: .5fr 1.5fr;
    grid-template-columns: .5fr 1.5fr;
}

/* =================== Nexure Dashboard Section Styles =================== */

.section {
    padding-top: 20px;
    padding-bottom: 20px;
}

/* =================== Nexure Dashboard Three Card Styles =================== */

.caliweb-card.dashboard-card {
    background: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 6px;
    padding: 20px;
}

.caliweb-card.dashboard-card-shrink {
    background: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 6px;
    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;
}

.note-card {
    margin-bottom: 15px;
}

.card-header {
    padding-top: 0px;
    padding-bottom: 10px;
    margin-bottom: 4%;
}

.card-header-account {
    background-color: #f1f1f1;
    padding: 10px;
    padding-left:20px;
    border-radius: 6px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: 1px solid #eee;
    margin-bottom: 2.5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.card-header-services {
    background-color: #f1f1f1;
    padding: 20px;
    border-radius: 6px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: 1px solid #eee;
    margin-bottom: 2.5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}


.settings-header {
    background-color: #f1f1f1;
    padding: 20px;
    padding-left:20px;
    border-radius: 6px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: none;
    margin-bottom: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.client-business-andor-profile-logo {
    height: 100%;
    width: 100%;
    border-radius: 5px;
}

.icon-size-formatted {
    height: 45px;
    width: 45px;
    border-radius: 5px;
    border: 1px solid #ddd;
}

.nexure-step-progress-container {
    display: flex;
    position: relative;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 700px;
    margin: 20px auto;
    padding: 10px 0;
}
  
.nexure-progress-step {
    position: relative;
    text-align: center;
    flex: 1;
    font-size: 14px;
    padding-bottom: 10px;
    color: gray;
}
  
.nexure-progress-step.active {
    font-weight: bold;
    color: black;
}
  
.nexure-progress-step::after {
    content: "";
    position: absolute;
    width: 10px;
    height: 10px;
    background-color: gray;
    border-radius: 50%;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
}
  
.nexure-step-progress-container::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 4px;
    background: lightgray;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    z-index: 0;
}
  
.nexure-step-progress-indicator {
    position: absolute;
    width: 25%;
    height: 4px;
    background: blue;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    transition: width 0.3s ease-in-out;
}

.card-footer {
    padding-top: 10px;
    padding-bottom: 0px;
    margin-top: 4%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.card-footer p,
.card-header p {
    font-size: 14px;
}

.custom-padding-account-card {
    padding-top: 0 !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
}

.account-status-badge {
    border-radius: 4px;
    padding: 4px 12px;
    margin-left: 20px;
    font-size: 12px;
    margin-top: 0;
}

.account-status-badge.passive {
    border: 1px solid #B8B8B8;
    background-color: #F1F1F1;
    color: #646464;
}

.account-status-badge.green {
    border: 1px solid #6ED741;
    background-color: #CEFFB9;
    color: #204510;
}

.account-status-badge.yellow {
    border: 1px solid #D5D94A;
    background-color: #FDFFBE;
    color: #585A1A;
}

.account-status-badge.red,
.account-status-badge.red-restricted {
    border: 1px solid #FF9090;
    background-color: #FFE1E1;
    color: #AD3434;
}

.account-status-badge.red-dark {
    border: 1px solid #FE5D5D;
    background-color: #FFD4D4;
    color: #901818;
}

/* =================== Nexure Dashboard Table Styles =================== */

.dashboard-table {
    width: 100%;
}

table {
    border-collapse: collapse;
    width: 100%;
    margin-top: -2%;
    margin-bottom: 1%;
    border-top: 1px solid #e6e5e5;
}

.price-table-head,
table tbody th {
    background-color: #efeeee !important;
}

td,
th {
    border-bottom: 1px solid #e6e5e5;
    text-align: left;
    padding: 10px;
    width: 100%;
    font-size: 12px;
}
/* ... */

